# closing-price-bet

./: .env.example  .gitignore  README.md  config.py  flask_app.py  market_gate.py  pyproject.toml  requirements.txt  run.py  screener.py
app/: __init__.py
app/routes/: __init__.py  common.py  kr_market.py
engine/: __init__.py  collectors.py  generator.py  llm_analyzer.py  models.py  position_sizer.py  scorer.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/kr/: page.tsx
frontend/src/app/dashboard/kr/closing-bet/: page.tsx
frontend/src/app/dashboard/kr/vcp/: page.tsx
