[project]
name = "kr-market"
version = "1.0.0"
description = "KR Market AI Stock Analysis System - 한국 주식 시장 AI 분석 시스템"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "flask>=3.0",
    "gunicorn>=21.0",
    "flask-cors>=4.0",
    
    # Data & Finance
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "pykrx>=1.0",
    
    # AI/LLM
    "openai>=1.0",
    
    # Utilities
    "requests>=2.28",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "lxml-html-clean>=0.1",
    "aiohttp>=3.8",
    
    # Visualization
    "plotly>=5.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "engine"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]
